finished MQ for tab-port and phone

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                             <h3 class="heading-tertiary u-margin-bottom-small">
                                 I had best week ever with my family.
                             </h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consectetur soluta reprehenderit consequuntur placeat magni ullam veniam repellendus voluptatibus doloremque. Enim distinctio inventore aut unde repudiandae! Porro ipsa beatae dolorum!
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             </p>                        
                         </div>
                     </div>
@@ -329,7 +329,7 @@
                             <h3 class="heading-tertiary u-margin-bottom-small">
                                 I can't forget the spectacular palces.
                             </h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia a quibusdam distinctio culpa doloribus! Amet quia pariatur ab, voluptatem explicabo tempora dolorem harum. Doloremque sit cum voluptate voluptates officia iure.
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia a quibusdam distinctio culpa doloribus! .
                             </p>                        
                         </div>
                     </div>
